build:升级 Java 版本并更新项目版本号
- 将 Java 版本从1.8 升级到21
- 更新项目版本号从 1.0.2到 2.0.0